# Trading-Caravan-Solver

./: CMakeLists.txt  Enums.py  GASover.py  Game.py  GameSolver.py  Trading Caravan Solver.py  Trading Carvan Solver.pyproj  Trading Carvan Solver.sln  build_TCSC.sh  main.cpp  main.py  neat.config  notes.txt  player.py  tests.cpp
AI_Solver/: AISolver.py  Best.txt  CMakeLists.txt  CreateBestBuys.cpp  CreateBestBuys.h  Game.cpp  Game.h  GameSolver.cpp  GameSolver.h  TCSC.cpp  build.sh  enums.h  main.cpp  notes.txt  player.h  train1.txt  train2.txt
Best_Buys/: fenwick1.txt  fenwick2.txt  generate_best_buys.py
V2/: Enums.py  Game.py  GameSolver.py  main.py  player.py
consts/: Enums.py  enums.h
game/: Game.cpp  Game.h  Game.py
player/: player.h  player.py
purchaseHandler/: BestPurchaseHandler.cpp  BestPurchaseHandler.h  FenwickTree2D.cpp  FenwickTree2D.h  best_purchase_handler.py  fenwick_tree_2d.py
solvers/: AISolver.py  GameSolver.cpp  GameSolver.h  GameSolver.py  TCSC.cpp  helpers.cpp  helpers.h
